// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ScrollView /> should render as expected: should deep render when mocked (please verify output manually) 1`] = `
<RCTScrollView>
  <View>
    <View>
      <Text>
        Hello World!
      </Text>
    </View>
  </View>
</RCTScrollView>
`;

exports[`<ScrollView /> should render as expected: should deep render when not mocked (please verify output manually) 1`] = `
<RCTScrollView>
  <View>
    <View>
      <Text>
        Hello World!
      </Text>
    </View>
  </View>
</RCTScrollView>
`;

exports[`<ScrollView /> should render as expected: should shallow render as <ScrollView /> when mocked 1`] = `
<ScrollView>
  <View>
    <Text>
      Hello World!
    </Text>
  </View>
</ScrollView>
`;

exports[`<ScrollView /> should render as expected: should shallow render as <ScrollView /> when not mocked 1`] = `
<ScrollView>
  <View>
    <Text>
      Hello World!
    </Text>
  </View>
</ScrollView>
`;
